modifiche per compilare su linux 1