@@ -4,6 +4,7 @@
 
 package io.modelcontextprotocol.common;
 
+import java.util.Collections;
 import java.util.Map;
 import java.util.function.BiFunction;
 
@@ -11,9 +12,11 @@ import io.modelcontextprotocol.client.McpAsyncClient;
 import io.modelcontextprotocol.client.McpClient;
 import io.modelcontextprotocol.client.transport.WebClientStreamableHttpTransport;
 import io.modelcontextprotocol.client.transport.WebFluxSseClientTransport;
+import io.modelcontextprotocol.server.McpAsyncServer;
 import io.modelcontextprotocol.server.McpAsyncServerExchange;
 import io.modelcontextprotocol.server.McpServer;
 import io.modelcontextprotocol.server.McpServerFeatures;
+import io.modelcontextprotocol.server.McpStatelessAsyncServer;
 import io.modelcontextprotocol.server.McpStatelessServerFeatures;
 import io.modelcontextprotocol.server.McpTransportContextExtractor;
 import io.modelcontextprotocol.server.TestUtil;
@@ -73,13 +76,13 @@ public class AsyncServerMcpTransportContextIntegrationTests {
 
 	// Async client context provider
 	ExchangeFilterFunction asyncClientContextProvider = (request, next) -> Mono.deferContextual(ctx -> {
-		var transportContext = ctx.getOrDefault(McpTransportContext.KEY, McpTransportContext.EMPTY);
+		McpTransportContext  transportContext = ctx.getOrDefault(McpTransportContext.KEY, McpTransportContext.EMPTY);
 		// // do stuff with the context
-		var headerValue = transportContext.get("client-side-header-value");
+		Object headerValue = transportContext.get("client-side-header-value");
 		if (headerValue == null) {
 			return next.exchange(request);
 		}
-		var reqWithHeader = ClientRequest.from(request).header(HEADER_NAME, headerValue.toString()).build();
+		ClientRequest  reqWithHeader = ClientRequest.from(request).header(HEADER_NAME, headerValue.toString()).build();
 		return next.exchange(reqWithHeader);
 	});
 
@@ -100,10 +103,12 @@ public class AsyncServerMcpTransportContextIntegrationTests {
 		return asyncStatelessHandler.apply(exchange.transportContext(), request);
 	};
 
+	
+
 	// Server context extractor
 	private final McpTransportContextExtractor<ServerRequest> serverContextExtractor = (ServerRequest r) -> {
-		var headerValue = r.headers().firstHeader(HEADER_NAME);
-		return headerValue != null ? McpTransportContext.create(Map.of("server-side-header-value", headerValue))
+		String headerValue = r.headers().firstHeader(HEADER_NAME);
+		return headerValue != null ? McpTransportContext.create(Collections.singletonMap("server-side-header-value", headerValue))
 				: McpTransportContext.EMPTY;
 	};
 
@@ -162,7 +167,7 @@ public class AsyncServerMcpTransportContextIntegrationTests {
 
 		startHttpServer(statelessServerTransport.getRouterFunction());
 
-		var mcpServer = McpServer.async(statelessServerTransport)
+		McpStatelessAsyncServer mcpServer = McpServer.async(statelessServerTransport)
 			.capabilities(McpSchema.ServerCapabilities.builder().tools(true).build())
 			.tools(new McpStatelessServerFeatures.AsyncToolSpecification(tool, asyncStatelessHandler))
 			.build();
@@ -173,15 +178,15 @@ public class AsyncServerMcpTransportContextIntegrationTests {
 
 		// Test tool call with context
 		StepVerifier
-			.create(asyncStreamableClient.callTool(new McpSchema.CallToolRequest("test-tool", Map.of()))
+			.create(asyncStreamableClient.callTool(new McpSchema.CallToolRequest("test-tool", Collections.emptyMap()))
 				.contextWrite(ctx -> ctx.put(McpTransportContext.KEY,
-						McpTransportContext.create(Map.of("client-side-header-value", "some important value")))))
+						McpTransportContext.create(Collections.singletonMap("client-side-header-value", "some important value")))))
 			.assertNext(response -> {
 				assertThat(response).isNotNull();
-				assertThat(response.content()).hasSize(1)
+				assertThat(response.getContent()).hasSize(1)
 					.first()
 					.extracting(McpSchema.TextContent.class::cast)
-					.extracting(McpSchema.TextContent::text)
+					.extracting(McpSchema.TextContent::getText)
 					.isEqualTo("some important value");
 			})
 			.verifyComplete();
@@ -194,7 +199,7 @@ public class AsyncServerMcpTransportContextIntegrationTests {
 
 		startHttpServer(streamableServerTransport.getRouterFunction());
 
-		var mcpServer = McpServer.async(streamableServerTransport)
+		McpAsyncServer mcpServer = McpServer.async(streamableServerTransport)
 			.capabilities(McpSchema.ServerCapabilities.builder().tools(true).build())
 			.tools(new McpServerFeatures.AsyncToolSpecification(tool, null, asyncStatefulHandler))
 			.build();
@@ -205,15 +210,15 @@ public class AsyncServerMcpTransportContextIntegrationTests {
 
 		// Test tool call with context
 		StepVerifier
-			.create(asyncStreamableClient.callTool(new McpSchema.CallToolRequest("test-tool", Map.of()))
+			.create(asyncStreamableClient.callTool(new McpSchema.CallToolRequest("test-tool", Collections.emptyMap()))
 				.contextWrite(ctx -> ctx.put(McpTransportContext.KEY,
-						McpTransportContext.create(Map.of("client-side-header-value", "some important value")))))
+						McpTransportContext.create(Collections.singletonMap("client-side-header-value", "some important value")))))
 			.assertNext(response -> {
 				assertThat(response).isNotNull();
-				assertThat(response.content()).hasSize(1)
+				assertThat(response.getContent()).hasSize(1)
 					.first()
 					.extracting(McpSchema.TextContent.class::cast)
-					.extracting(McpSchema.TextContent::text)
+					.extracting(McpSchema.TextContent::getText)
 					.isEqualTo("some important value");
 			})
 			.verifyComplete();
@@ -226,7 +231,7 @@ public class AsyncServerMcpTransportContextIntegrationTests {
 
 		startHttpServer(sseServerTransport.getRouterFunction());
 
-		var mcpServer = McpServer.async(sseServerTransport)
+		 McpAsyncServer mcpServer = McpServer.async(sseServerTransport)
 			.capabilities(McpSchema.ServerCapabilities.builder().tools(true).build())
 			.tools(new McpServerFeatures.AsyncToolSpecification(tool, null, asyncStatefulHandler))
 			.build();
@@ -237,15 +242,15 @@ public class AsyncServerMcpTransportContextIntegrationTests {
 
 		// Test tool call with context
 		StepVerifier
-			.create(asyncSseClient.callTool(new McpSchema.CallToolRequest("test-tool", Map.of()))
+			.create(asyncSseClient.callTool(new McpSchema.CallToolRequest("test-tool", Collections.emptyMap()))
 				.contextWrite(ctx -> ctx.put(McpTransportContext.KEY,
-						McpTransportContext.create(Map.of("client-side-header-value", "some important value")))))
+						McpTransportContext.create(Collections.singletonMap("client-side-header-value", "some important value")))))
 			.assertNext(response -> {
 				assertThat(response).isNotNull();
-				assertThat(response.content()).hasSize(1)
+				assertThat(response.getContent()).hasSize(1)
 					.first()
 					.extracting(McpSchema.TextContent.class::cast)
-					.extracting(McpSchema.TextContent::text)
+					.extracting(McpSchema.TextContent::getText)
 					.isEqualTo("some important value");
 			})
 			.verifyComplete();
